apply plugin: 'java'

sourceCompatibility = 1.8
version = '1.0'

repositories {

    mavenCentral()

}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile group: 'org.apache.cassandra', name:'cassandra-all', version:'3.0.0-SNAPSHOT'
    testCompile group: 'com.carrotsearch', name: 'junit-benchmarks', version: '0.7.2'
    testCompile group: 'com.h2database', name: 'h2', version: '1.4.186'
}

test {
    jvmArgs '-Djub.consumers=CONSOLE,H2 -Djub.db.file=.benchmarks -XX:+UseThreadPriorities -XX:ThreadPriorityPolicy=42 -Xms750M -Xmx4000M -Xmn188M -XX:+HeapDumpOnOutOfMemoryError -Xss256k -XX:+UseParNewGC -XX:+UseConcMarkSweepGC'.split(" ")

}